--- a/src/ethereum-token-standards-dodao-academy.yaml
+++ b/src/ethereum-token-standards-dodao-academy.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: New Guide
-created: '2022-12-05T23:40:49.827Z'
+created: '2022-12-05T23:49:44.820Z'
 guideIntegrations:
   discordRoleIds: []
 guideType: course
@@ -176,6 +176,114 @@ steps:
     name: ERC-721 vs ERC-1155
     stepItems: []
     uuid: e894c494-fb4c-4df2-9af6-de25cb6ca799
+  - content: >-
+      ERC-1337 is a proposed Ethereum token standard that is focused on enabling
+      decentralized applications (dApps) to access and manage their users' data
+      in a secure and decentralized manner. ERC-1337 is intended to provide a
+      common framework for dApps to securely store and access user data,
+      including personal information, preferences, and other data. This can help
+      to ensure that users have control over their own data and can choose how
+      it is used by dApps.
+
+
+      ERC-1337 was first proposed in 2019 by the Ethereum dApp development team
+      DappHub, and is currently in the process of being finalized and adopted by
+      the Ethereum community. Some of the key features of ERC-1337 include:
+
+
+      1. Secure data storage: ERC-1337 allows dApps to store user data securely
+      on the Ethereum blockchain, using cryptographic techniques to ensure data
+      integrity and security.
+
+      2. Data access controls: ERC-1337 includes built-in mechanisms for dApps
+      to request and receive user data in a secure and decentralized manner.
+      This can help to ensure that dApps only access the data that they need,
+      and that users have control over how their data is used.
+
+      3. Data portability: ERC-1337 allows users to transfer their data between
+      dApps in a secure and decentralized manner, enabling them to maintain
+      control over their data and choose which dApps they share it with.
+
+
+      Overall, ERC-1337 is seen as an important step forward in the development
+      of dApps on the Ethereum blockchain. It is expected to enable dApps to
+      access and manage user data in a secure and decentralized manner, while
+      also giving users more control over their own data.
+    name: ERC-1337
+    stepItems: []
+    uuid: 5f481bac-1dc8-4aab-a92e-a1b9ab75c20e
+  - content: >-
+      ERC-223 is a proposed Ethereum token standard that is designed to improve
+      upon the existing ERC20 standard. ERC-223 adds several new features to
+      ERC20, including the ability to prevent the accidental loss of tokens and
+      the ability to support multiple transactions within a single transaction.
+      These enhancements are intended to make ERC-223 more efficient and
+      user-friendly than ERC20.
+
+
+      ERC-223 was first proposed in 2017 by the Ethereum developer Dexaran, and
+      is currently in the process of being finalized and adopted by the Ethereum
+      community. Some of the key benefits of ERC-223 compared to ERC20 include:
+
+
+      1. Prevention of token loss: ERC-223 includes a mechanism to prevent
+      tokens from being accidentally sent to smart contracts that do not support
+      them, which can help to prevent the loss of tokens.
+
+      2. Support for multiple transactions: ERC-223 allows for multiple
+      transactions to be included in a single transaction, which can reduce
+      transaction fees and improve efficiency.
+
+      3. Compatibility with ERC20: ERC-223 is backwards-compatible with ERC20,
+      meaning that it can be used with existing ERC20 contracts and
+      infrastructure without any changes.
+
+
+      Overall, ERC-223 is seen as an improvement over ERC20, and is expected to
+      become a widely used token standard in the Ethereum ecosystem.
+    name: ERC-223
+    stepItems: []
+    uuid: 4f81d68b-bf4b-432b-b9fe-06107921708a
+  - content: >+
+      EIP-5114: Soulbound Badge is a proposed Ethereum Improvement Proposal
+      (EIP) that is focused on enabling the creation and management of unique,
+      non-fungible digital assets on the Ethereum blockchain. EIP-5114:
+      Soulbound Badge proposes a new type of token called a "soulbound badge,"
+      which is a unique digital asset that cannot be replicated or divided. This
+      can be useful for applications such as collectible items, gaming assets,
+      and other digital goods that require unique ownership and provenance.
+
+
+      EIP-5114: Soulbound Badge was first proposed in 2019 by the Ethereum
+      developer Eric Conner, and is currently in the process of being reviewed
+      and discussed by the Ethereum community. Some of the key features of
+      EIP-5114: Soulbound Badge include:
+
+
+      1. Unique digital assets: EIP-5114: Soulbound Badge allows for the
+      creation of unique digital assets that cannot be replicated or divided,
+      providing a strong foundation for applications such as collectibles and
+      gaming assets.
+
+      2. Secure ownership: EIP-5114: Soulbound Badge includes built-in
+      mechanisms to ensure that the ownership of soulbound badges is secure and
+      cannot be transferred or stolen.
+
+      3. Flexible token behavior: EIP-5114: Soulbound Badge allows for the
+      customization of the behavior of soulbound badges, including rules for how
+      they can be transferred and other aspects of their functionality.
+
+      Overall, EIP-5114: Soulbound Badge is seen as a valuable addition to the
+      Ethereum ecosystem, providing a strong foundation for applications that
+      require unique, non-fungible digital assets. If adopted, it could enable
+      the creation of a wide range of new applications and use cases on the
+      Ethereum blockchain.
+
+
+
+    name: EIP-5114 - Soulbound Badge
+    stepItems: []
+    uuid: 0277dfea-70c4-459b-b77b-9dfa198a6242
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
 uuid: ethereum-token-standards-dodao-academy
