--- a/src/proof-of-reserves-dodao-academy.yaml
+++ b/src/proof-of-reserves-dodao-academy.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: What is POR and how various exchanges can implement it
-created: '2022-12-10T11:00:36.638Z'
+created: '2022-12-10T13:22:44.882Z'
 guideIntegrations:
   discordRoleIds: []
 guideType: onboarding
@@ -49,11 +49,34 @@ steps:
     name: Introduction
     stepItems: []
     uuid: b4cf1a30-95e2-40a2-978a-79a66c411a60
-  - content: >
+  - content: >+
       https://academy.binance.com/en/articles/what-is-proof-of-reserves-and-how-it-works-on-binance
 
 
       https://cointelegraph.com/news/proof-of-reserves-can-reserve-audits-avoid-another-ftx-like-moment
+
+
+      https://blockworks.co/news/what-are-proof-of-reserves-and-can-they-build-back-trust
+
+
+      https://blog.bitmex.com/proof-of-reserves-liabilities-bitmex-demonstration/
+
+
+      https://www.kraken.com/proof-of-reserves
+
+
+      https://portfolio.nansen.ai/dashboard/crypto.com
+
+      https://proof-of-reserves.trustexplorer.io/clients/ledn.io
+
+      https://real-time-attest.trustexplorer.io/nexo
+
+      https://proof-of-reserves.trustexplorer.io/clients/gate.io
+
+
+
+      https://www.youtube.com/watch?v=Vi5s9Qn7S14&t=4s
+
     name: References
     stepItems: []
     uuid: e0698fe1-21cc-4a2c-b973-a57425898145
