update guide Crypto Security

--- a/src/guides.yaml
+++ b/src/guides.yaml
@@ -15,3 +15,4 @@ guides:
   - optimistic-rollups-dodao-academy.yaml
   - bridges-deep-dive-dodao-academy.yaml
   - central-bank-digital-currency-dodao-academy.yaml
+  - crypto-security-dodao-academy.yaml
