--- a/src/ethereum-token-standards-dodao-academy.yaml
+++ b/src/ethereum-token-standards-dodao-academy.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: New Guide
-created: '2022-12-16T19:02:10.559Z'
+created: '2022-12-16T19:04:27.697Z'
 guideIntegrations:
   discordRoleIds: []
 guideType: course
@@ -200,7 +200,7 @@ steps:
       ## Other Standards for Fungible Tokens
 
 
-      * **ERC-1400: **The ERC-1404 consensus allows token creators greater
+      * **ERC-1400:** The ERC-1404 consensus allows token creators greater
       control over token circulation and user visibility. The token differs from
       the typical ERC-20 standard frequently applied to altcoins by having the
       ability to identify holders of the token and freeze supply. 
@@ -210,12 +210,12 @@ steps:
       unintentional token sends to contracts and make token transactions behave
       like ether transactions.
 
-      * **ERC-667: **The ERC-677 standard aims to provide additional
+      * **ERC-667:** The ERC-677 standard aims to provide additional
       functionality without overriding the existing ERC-20 standard. This
       standard adds a new function, transferAndCall(), which is unlike the
       ERC-223 standard, which overrides the existing transfer() function.
 
-      * **ERC-1203: **The Standard interface for a token contract with multiple
+      * **ERC-1203:** The Standard interface for a token contract with multiple
       token classes is also ERC-20 compatible, which makes it an ideal solution
       for those looking to use a variety of tokens within their application or
       system.
@@ -225,7 +225,25 @@ steps:
   - content: >-
       ## Other Standards for Non-Fungible Tokens
 
-
+      * **EIP-5114**: Soulbound Badge was first proposed in 2019 by the Ethereum
+            developer Eric Conner, and is currently in the process of being reviewed
+            and discussed by the Ethereum community. Some of the key features of
+            EIP-5114: Soulbound Badge include:
+            1. Unique digital assets: EIP-5114: Soulbound Badge allows for the
+            creation of unique digital assets that cannot be replicated or divided,
+            providing a strong foundation for applications such as collectibles and
+            gaming assets.
+            2. Secure ownership: EIP-5114: Soulbound Badge includes built-in
+            mechanisms to ensure that the ownership of soulbound badges is secure and
+            cannot be transferred or stolen.
+            3. Flexible token behavior: EIP-5114: Soulbound Badge allows for the
+            customization of the behavior of soulbound badges, including rules for how
+            they can be transferred and other aspects of their functionality.
+            Overall, EIP-5114: Soulbound Badge is seen as a valuable addition to the
+            Ethereum ecosystem, providing a strong foundation for applications that
+            require unique, non-fungible digital assets. If adopted, it could enable
+            the creation of a wide range of new applications and use cases on the
+            Ethereum blockchain.
       * **ERC-809:** The standard for renting out your NFTs, is by creating an
       API to allow any “rival” NFT to be rented. An NFT is considered rival if
       being in possession of the NFT simultaneously prevents consumption/access
@@ -237,7 +255,7 @@ steps:
       object is not used for a long period of time, the creator will still
       receive compensation for its use.
 
-      * **ERC-1238: **ERC-1238 is the standard for Non-transferable tokens that
+      * **ERC-1238:** ERC-1238 is the standard for Non-transferable tokens that
       represent "badges". A badge is a token that, once given, cannot be
       changed. Over time, badges can accrue and be put at risk. In a nutshell,
       badges are declarations about a public key; they might be qualitative or
