update guide Custodian vs Non Cust. Wallet

--- a/src/custodian-vs-non-cust-wallet-dodao-academy.yaml
+++ b/src/custodian-vs-non-cust-wallet-dodao-academy.yaml
@@ -1,7 +1,7 @@
 categories:
   - general
 content: Educates about the difference and talks about pros and cons
-created: '2022-11-21T20:17:16.346Z'
+created: '2023-01-12T13:40:13.248Z'
 guideIntegrations:
   discordRoleIds: []
 guideType: onboarding
@@ -70,7 +70,6 @@ steps:
     name: Crypto wallets
     stepItems: []
     uuid: 4642a24e-1fbe-4c26-896d-a055087fdb08
-
   - content: ''
     name: Evaluation
     stepItems:
@@ -79,13 +78,15 @@ steps:
         choices:
           - content: The custody of public keys
             key: A
-          - content: The custody of private keys 
+          - content: The custody of private keys
             key: B
           - content: The customer service
             key: C
           - content: The number of users
             key: D
-        content: What is the key differentiating factor between custodial and non-custodial wallets?
+        content: >-
+          What is the key differentiating factor between custodial and
+          non-custodial wallets?
         type: SingleChoice
         uuid: c53e1473-ac12-4224-b59d-d2e485f2aa1d
       - answerKeys:
@@ -103,8 +104,6 @@ steps:
         type: SingleChoice
         uuid: 0a3238fc-0d77-4f7d-8d21-c0cc3d681d5e
     uuid: ff07c12f-adad-4431-9ced-951acad63b87
-
-  
   - content: >-
       ## Custodial Wallets
 
@@ -189,7 +188,6 @@ steps:
     name: Custodial Wallets
     stepItems: []
     uuid: 58dd8e44-0ba1-4ede-8666-c62f4a142a62
- 
   - content: ''
     name: Evaluation
     stepItems:
@@ -198,13 +196,20 @@ steps:
           - C
           - D
         choices:
-          - content: Your funds could get converted into another currency unannounced 
+          - content: Your funds could get converted into another currency unannounced
             key: A
-          - content: As many of the exchanges are not regulated, the funds might not be backed in a 1:1 ratio and are possible to be misused by the exchange
+          - content: >-
+              As many of the exchanges are not regulated, the funds might not be
+              backed in a 1:1 ratio and are possible to be misused by the
+              exchange
             key: B
-          - content: They usually don't give the proofs of their reserves, i.e. all the assets held by them in custody
+          - content: >-
+              They usually don't give the proofs of their reserves, i.e. all the
+              assets held by them in custody
             key: C
-          - content: The security of your funds is as safe as the security of the exchange
+          - content: >-
+              The security of your funds is as safe as the security of the
+              exchange
             key: D
         content: Why is it risky to use a custodial wallet?
         type: MultipleChoice
@@ -224,9 +229,6 @@ steps:
         type: SingleChoice
         uuid: a3ac43df-1711-45c0-801c-6d46e8275185
     uuid: 0e277d18-3e45-4d07-b902-b68e987ad28f
-
-
- 
   - content: >-
       ## Non Custodial Wallets
 
@@ -333,7 +335,6 @@ steps:
     name: Non Custodial Wallets
     stepItems: []
     uuid: 48d8f905-34fd-447e-9131-6c3549fcf281
- 
   - content: ''
     name: Evaluation
     stepItems:
@@ -343,9 +344,13 @@ steps:
         choices:
           - content: There is the possibility of the private key getting stolen or lost
             key: A
-          - content: Inheritance of funds is tricky, given that all access to the funds lies with the holder of the private keys
+          - content: >-
+              Inheritance of funds is tricky, given that all access to the funds
+              lies with the holder of the private keys
             key: B
-          - content: The private key is held by a third party, which could be troublesome
+          - content: >-
+              The private key is held by a third party, which could be
+              troublesome
             key: C
           - content: Funds are not secure compared to a custodial wallet
             key: D
@@ -356,9 +361,9 @@ steps:
           - B
           - C
         choices:
-          - content: IOA (Internally Owned Account) 
+          - content: IOA (Internally Owned Account)
             key: A
-          - content: EOA (Externally Owned Account) 
+          - content: EOA (Externally Owned Account)
             key: B
           - content: Smart contract account
             key: C
@@ -371,13 +376,18 @@ steps:
           - A
           - D
         choices:
-          - content: Custom logic for spending and ability to set limitations on spending based on complex logic
+          - content: >-
+              Custom logic for spending and ability to set limitations on
+              spending based on complex logic
             key: A
           - content: Smart contract wallets provide a safe way of storing private keys
             key: B
           - content: It is free to deploy and use
             key: C
-          - content: Multi-sig contracts which need the signature of more than one user (M-of-N) can be deployed, improving the security aspect of the wallet 
+          - content: >-
+              Multi-sig contracts which need the signature of more than one user
+              (M-of-N) can be deployed, improving the security aspect of the
+              wallet
             key: D
         content: What are the advantages of smart contract wallets?
         type: MultipleChoice
@@ -385,20 +395,25 @@ steps:
       - answerKeys:
           - C
         choices:
-          - content: Multi-Party Computation wallets are cold wallets stored in a user's pc, capable of complex computations
+          - content: >-
+              Multi-Party Computation wallets are cold wallets stored in a
+              user's pc, capable of complex computations
             key: A
           - content: It is an alias of multiple signature wallet
             key: B
-          - content: The private key is split into parts, each user has to sign the transaction with their respective part of the private key to authorize a transaction
+          - content: >-
+              The private key is split into parts, each user has to sign the
+              transaction with their respective part of the private key to
+              authorize a transaction
             key: C
-          - content: Multi-Party Computation wallets are hot wallets stored in a user's pc, capable of complex computations
+          - content: >-
+              Multi-Party Computation wallets are hot wallets stored in a user's
+              pc, capable of complex computations
             key: D
         content: Which of these is true about Multi-Party Computation wallets?
         type: SingleChoice
         uuid: 61896398-9d4d-44bc-8deb-08cc087eddb4
     uuid: c4ab0bba-ba4d-436e-a034-3232e8cf6daa
-
-
   - content: |-
       # Custodial vs Non-Custodial Wallets
 
@@ -473,16 +488,15 @@ steps:
     name: Custodial vs Non-Custodial
     stepItems: []
     uuid: a1366141-af9b-4244-9906-9a9ec299c7f4
-
   - content: ''
     name: Evaluation
     stepItems:
       - answerKeys:
           - A
         choices:
-          - content: "False"
+          - content: 'False'
             key: A
-          - content: "True"
+          - content: 'True'
             key: B
         content: KYC verification is needed in non-custodial wallets
         type: SingleChoice
@@ -491,11 +505,15 @@ steps:
           - A
           - C
         choices:
-          - content: All private keys are stored in one place and hence are more susceptible to being hacked
+          - content: >-
+              All private keys are stored in one place and hence are more
+              susceptible to being hacked
             key: A
-          - content: The private keys of an account could be changed 
+          - content: The private keys of an account could be changed
             key: B
-          - content: User could lose their assets in case company makes bad business decisions
+          - content: >-
+              User could lose their assets in case company makes bad business
+              decisions
             key: C
           - content: No issues, they have very high security
             key: D
@@ -503,7 +521,6 @@ steps:
         type: MultipleChoice
         uuid: 2ea27c9d-f87b-4448-b14b-a7c496475508
     uuid: ff60ca24-a125-49af-b4a9-d64ccefc6327
-
   - content: >
       With over 150 wallets
       ([https://explorer.walletconnect.com/?type=wallet](https://explorer.walletconnect.com/?type=wallet))
@@ -809,5 +826,5 @@ steps:
     stepItems: []
     uuid: 74bef816-2f4b-4a4b-b4e4-8bd740967e97
 thumbnail: >-
-  https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
+  https://d31h13bdjwgzxs.cloudfront.net/academy/dodao/guides/custodian_vs_non_custodian_Wallet.png
 uuid: custodian-vs-non-cust-wallet-dodao-academy
